src/system/kernel/arch/x86/paging/pae/X86VMTranslationMapPAE.cpp
@@ -451,9 +451,9 @@ X86VMTranslationMapPAE::UnmapPages(VMArea* area, addr_t base, size_t size,
 					page->mappings.Remove(mapping);
 					queue.Add(mapping);
 				} else
-					page->wired_count--;
+					page->DecrementWiredCount();
 
-				if (page->wired_count == 0 && page->mappings.IsEmpty()) {
+				if (!page->IsMapped()) {
 					atomic_add(&gMappedPagesCount, -1);
 
 					if (updatePageQueue) {
@@ -515,7 +515,7 @@ X86VMTranslationMapPAE::UnmapArea(VMArea* area, bool deletingAddressSpace,
 		VMCache* cache = page->Cache();
 
 		bool pageFullyUnmapped = false;
-		if (page->wired_count == 0 && page->mappings.IsEmpty()) {
+		if (!page->IsMapped()) {
 			atomic_add(&gMappedPagesCount, -1);
 			pageFullyUnmapped = true;
 		}
