src/system/kernel/vm/PageCacheLocker.cpp
@@ -14,7 +14,7 @@ PageCacheLocker::_IgnorePage(vm_page* page)
 {
 	if (page->busy || page->State() == PAGE_STATE_WIRED
 		|| page->State() == PAGE_STATE_FREE || page->State() == PAGE_STATE_CLEAR
-		|| page->State() == PAGE_STATE_UNUSED || page->wired_count > 0)
+		|| page->State() == PAGE_STATE_UNUSED || page->WiredCount() > 0)
 		return true;
 
 	return false;
